# mcp-bouncer

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  TODO.md  Taskfile.yml  dev_hooks.go  docker-compose.yml  eslint.config.js  go.mod  go.sum  greetservice.go  index.html  main.go  mise.toml  package-lock.json  package.json  prod_hooks.go  settings.example.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.buildkite/: Dockerfile  Dockerfile.ci  docker-compose.yml  pipeline.yml
.plan/: TODO.md
.storybook/: main.ts  preview.tsx
codex/: setup.sh
frontend/: .prettierignore  .prettierrc.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/.storybook/: main.ts  preview.ts  preview.tsx  tsconfig.json
frontend/public/: style.css
frontend/src/: App.tsx  README.md  main.ts  main.tsx  style.css
frontend/src/components/: ClientCard.tsx  ClientList.stories.tsx  ClientList.tsx  Header.stories.tsx  Header.tsx  ListenAddress.tsx  LoadingButton.tsx  ModeToggle.tsx  ServerCard.stories.tsx  ServerCard.tsx  ServerForm.stories.tsx  ServerForm.tsx  ServerList.stories.tsx  ServerList.tsx  StatusIndicator.tsx  TabSwitcher.tsx  Toast.stories.tsx  Toast.tsx  ToggleSwitch.tsx  ToolsModal.stories.tsx  ToolsModal.tsx  index.ts
frontend/src/contexts/: ToastContext.tsx
frontend/src/hooks/: useIncomingClients.ts  useMCPService.ts  useTheme.ts
pkg/api/: server.go
pkg/services/greet/: greetservice.go
pkg/services/mcp/: client.go  client_manager.go  errors.go  events.go  incoming.go  oauth_helpers.go  server.go  service.go  token_store.go
pkg/services/settings/: settings.go
prds/: debugger.md
specs/: 001-client-list.md
src/: App.tsx  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: events.json  sql.json
src-tauri/crates/mcp-bouncer-core/: Cargo.toml
src-tauri/crates/mcp-bouncer-core/src/: client.rs  config.rs  events.rs  incoming.rs  lib.rs  logging.rs  oauth.rs  server.rs  status.rs
src-tauri/crates/mcp-bouncer-core/src/transport/: intercepting.rs
src-tauri/crates/mcp-bouncer-logging/: Cargo.toml
src-tauri/crates/mcp-bouncer-logging/src/: lib.rs
src-tauri/src/: app_logic.rs  client.rs  commands.rs  config.rs  events.rs  incoming.rs  lib.rs  logging.rs  logging_core.rs  logging_origin.rs  logging_sqlite.rs  main.rs  oauth.rs  overlay.rs  runtime.rs  secrets.rs  server.rs  socket_proxy.rs  status.rs  tools_cache.rs  types.rs  unauthorized.rs
src-tauri/src/sql/migrations/: 0001_logging_init.sql  0002_logging_add_origin.sql
src-tauri/src/transport/: intercepting.rs  mod.rs
src-tauri/tests/: auth_states.rs  authorize_client.rs  client_errors.rs  common.rs  config_integration.rs  e2e.rs  e2e_everything.rs  events_lifecycle.rs  http_headers_integration.rs  incoming_clients.rs  logging_integration.rs  oauth_e2e.rs  oauth_transport.rs  socket_bridge.rs  socket_proxy.rs  sse_integration.rs
src/components/: ClientCard.tsx  ClientList.stories.tsx  ClientList.test.tsx  DropdownSelect.stories.tsx  DropdownSelect.test.tsx  DropdownSelect.tsx  FormInput.tsx  Header.stories.tsx  Header.test.tsx  Header.tsx  KeyValueList.stories.tsx  KeyValueList.test.tsx  KeyValueList.tsx  LoadingButton.stories.tsx  LoadingButton.test.tsx  LoadingButton.tsx  ServerCard.stories.tsx  ServerCard.test.tsx  ServerCard.tsx  ServerForm.stories.tsx  ServerForm.test.tsx  ServerForm.tsx  ServerList.stories.tsx  ServerList.test.tsx  ServerList.tsx  StatusIndicator.test.tsx  StatusIndicator.tsx  TabSwitcher.test.tsx  TabSwitcher.tsx  Toast.stories.tsx  Toast.test.tsx  Toast.tsx  ToggleSwitch.test.tsx  ToggleSwitch.tsx  ToolsModal.stories.tsx  ToolsModal.test.tsx  ToolsModal.tsx  index.ts
src/components/clients/: ClientCard.tsx
src/components/debugger/: DebuggerHeader.stories.tsx  DebuggerHeader.test.tsx  DebuggerHeader.tsx  RequestPanel.stories.tsx  RequestPanel.tsx  ResponsePanel.stories.tsx  ResponsePanel.test.tsx  ResponsePanel.tsx  RichToolResult.test.tsx  RichToolResult.tsx  StatusPill.tsx  ToolListPanel.stories.tsx  ToolListPanel.test.tsx  ToolListPanel.tsx  ToolRequestForm.stories.tsx  ToolRequestForm.test.tsx  ToolRequestForm.tsx  index.ts  types.ts  utils.test.ts  utils.ts
src/components/logs/: HighlightedJson.tsx  LogList.tsx  LogListItem.tsx  LogsFilterBar.tsx  LogsHistogram.test.tsx  LogsHistogram.tsx
src/components/servers/: ServerCard.stories.tsx  ServerCard.test.tsx  ServerCard.tsx  ServerForm.stories.tsx  ServerForm.test.tsx  ServerForm.tsx  ServerList.stories.tsx  ServerList.test.tsx  ServerList.tsx  ToolsModal.stories.tsx  ToolsModal.test.tsx  ToolsModal.tsx
src/components/settings/: SettingsModal.stories.tsx  SettingsModal.test.tsx  SettingsModal.tsx
src/contexts/: ToastContext.test.tsx
src/hooks/: useFocusTrap.ts  useIncomingClients.test.tsx  useIncomingClients.ts  useMCPService.ts  useRpcLogs.test.tsx  useRpcLogs.ts  useTheme.test.ts  useTheme.test.tsx  useTheme.ts
src/hooks/mcp/: types.ts  useClientStatusState.test.tsx  useClientStatusState.ts  useMCPActions.test.ts  useMCPActions.test.tsx  useMCPActions.ts  useMCPBootstrap.ts  useMCPEvents.ts  useMCPSubscriptions.test.tsx  useMCPSubscriptions.ts  useServerActions.ts  useServersState.test.tsx  useServersState.ts  useServiceInfo.test.tsx  useServiceInfo.ts  useSettingsState.test.tsx  useSettingsState.ts
src/lib/: index.ts  sqlLogging.ts
src/pages/: ClientList.stories.tsx  ClientList.test.tsx  ClientList.tsx  DebuggerPage.test.tsx  DebuggerPage.tsx  LogsPage.tsx  ServersPage.tsx
src/tauri/: bindings.ts  bridge.test.ts  bridge.ts  events.ts
src/test/: render.tsx  setup.ts
src/types/: events.ts  logs.ts  schemas.ts
src/utils/: date.test.ts  date.ts  suspense.ts
tauri/: .gitignore  README.md  package-lock.json  package.json
tauri/src/: README.md
tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs  settings.rs
tauri/src/components/: ClientCard.stories.tsx  README.md  (+14 more)
(+28 files in other folders)
