[package]
name = "mcp-bouncer-tauri"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "mcp_bouncer"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http1"] }
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "6"
futures = "0.3.31"
open = "5.3.2"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
rmcp = { version = "0.8.0", features = [
  "client",
  "macros",
  "transport-streamable-http-client-reqwest",
  "transport-sse-client-reqwest",
  "transport-sse-server",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "auth"
] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.133"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde", "serde_json", "chrono"] }
specta-typescript = "0.0.9"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }
base64 = "0.22.1"
png = "0.18.0"

[features]
default = []

[dev-dependencies]
async-trait = "0.1.89"
schemars = "1.0.4"
serial_test = "3"
