[package]
name = "mcp-bouncer"
version = "0.1.0"
edition = "2024"
publish = false
default-run = "mcp-bouncer"

[lib]
name = "mcp_bouncer"
path = "src/lib.rs"

[[bin]]
name = "mcp-bouncer-socket-bridge"
path = "src/bin/socket_bridge.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["http1"] }
hyper = { version = "1.0", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "tokio"] }
hyperlocal = { version = "0.9.1", features = ["server"] }
http-body-util = "0.1.3"
bytes = "1.9"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
dirs = "6"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
futures = "0.3.31"
open = "5.3.2"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
rmcp = { version = "0.8.3", features = [
"client",
"server",
"macros",
"transport-streamable-http-client-reqwest",
"transport-sse-client-reqwest",
"transport-sse-server",
"transport-child-process",
"transport-streamable-http-server",
"transport-io",
  "transport-worker",
  "auth"
] }
keyring = { version = "3.6.3" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sse-stream = "0.2.1"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde", "serde_json", "chrono"] }
specta-typescript = "0.0.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros", "sync", "time", "io-util", "net", "process", "signal"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["fmt", "env-filter"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }
base64 = "0.22.1"
png = "0.18.0"

[features]
default = []

[dev-dependencies]
async-trait = "0.1.89"
schemars = "1.0.4"
serial_test = "3.2.0"

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "ios")'.dependencies]
keyring = { version = "3.6.3", features = ["apple-native"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "3.6.3", features = ["windows-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3.6.3", features = ["linux-native"] }
