[package]
name = "mcp-bouncer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
open = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
axum = { version = "0.7", features = ["http1"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes = "1"
futures = "0.3"
rmcp = { version = "0.1", optional = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
base64 = "0.21"
png = "0.17"

[features]
with-rmcp = ["rmcp"]
