[package]
name = "mcp-bouncer-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["http1"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dirs = "6"
futures = "0.3"
open = "5"
reqwest = { version = "0.12", features = ["json", "stream"] }
rmcp = { version = "0.6.1", features = [
  "client",
  "macros",
  "transport-streamable-http-client-reqwest",
  "transport-sse-client-reqwest",
  "transport-sse-server",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "auth"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.22", features = ["derive", "serde", "serde_json", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time", "net"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3"
