[package]
name = "mcp-bouncer-logging"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
duckdb = { version = "1.3.2", features = ["bundled", "chrono", "serde_json", "uuid", "r2d2"] }
mcp-bouncer-core = { path = "../mcp-bouncer-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
specta = { version = "2.0.0-rc.22", features = ["serde", "serde_json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
serial_test = "3"
